--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "pre-commit": "npm run build && npm test && npm run lint && npm audit",
+    "pre-commit": "npm run build && npm test && npm run lint && npm audit --audit-level high",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && tsc",
     "lint": "standardx './src/**/*.ts' './test/**/*.ts'",
@@ -26,21 +26,20 @@
   ],
   "homepage": "https://github.com/nordluf/keepmeup-client#readme",
   "devDependencies": {
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@release-it/bumper": "^5.0.0",
-    "@release-it/conventional-changelog": "^7.0.0",
-    "@types/jest": "^26.0.0",
-    "@types/node": "^12.12.43",
+    "@commitlint/cli": "^19.0.0",
+    "@commitlint/config-conventional": "^19.0.0",
+    "@release-it/conventional-changelog": "^9.0.0",
+    "@types/jest": "^27.0.0",
+    "@types/node": "^24.2.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "conventional-changelog-angular": "^7.0.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.0",
-    "release-it": "^16.0.0",
+    "jest": "^27.0.0",
+    "release-it": "^17.0.0",
     "standardx": "^7.0.0",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.0.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^27.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.0"
   },
